# openwrt-nix

./: .gitignore  .sops.yaml  Cargo.toml  Justfile  README.md  book.toml  example.nix  flake.nix  secrets.yml  setup.cfg
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.github/doc/: README_en.md  README_zh.md
.github/workflows/: check.yml  ci.yml  docs.yml  release.yml
docs/: SUMMARY.md  architecture.md  examples.md  features.md  index.md
nix/: default.nix  firmware.nix  module-options.nix  nix-uci.nix  nuci.nix
src/: deploy.rs  diff.rs  error.rs  generator.rs  helpers.rs  main.rs  models.rs  pipeline.rs  secrets.rs  uci_key.rs  validation.rs
test/: Containerfile  Containerfile.agent-test  Containerfile.apk  Containerfile.opkg  containers.py  integration_test.py  package-server.py  run_integration.sh  test_config.nix  test_config_apk.nix  test_edge_cases.json  test_interp2.json  test_interpolate.json  test_uci.json  test_unclosed.json  test_watchdog_rollback.sh
test/mock_secrets/: secrets.json
test/test_secrets/: secrets.json
