[package]
name = "nuci"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "nuci"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = { version = "2", features = ["serde"] }
tempfile = "3"
